@@ -4,6 +4,7 @@
 
 === 1.0.10 ===
 * Fixed bug in io::Path::as_relative() call.
+* Fixed bug in lspc::AudioWriter::write_frames() method.
 
 === 1.0.9 ===
 * Updated build scripts.
